fix: pixel image
- feat: possibility to stop animation
- fix: shapes not showing in correct position

--- a/assets/styles/components/pixel-image.scss
+++ b/assets/styles/components/pixel-image.scss
@@ -26,6 +26,13 @@
     display: none;
   }
 
+  /*&__video-canvas {
+    display: block;
+    position: relative;
+    left: 200px;
+    scale: 40;
+  }*/
+
   &__container {
     width: 100%;
     height: 100%;
